--- a/EnCAB/templates/algorithm.html
+++ b/EnCAB/templates/algorithm.html
@@ -15,23 +15,29 @@
     </tr>
     <tr>
         <td colspan="4">{%- if b.find('algdata/variables') %}
-            <table>
+            <table class="algo">
                 <tr>
                     {%- for var in b.find('algdata/variables') %}
                     <td>{% if var.find('description').text %}{{ var.find('description').text }} in {% endif %}<a href="../units/{{var.find('unit').text}}.html">{{ var.find('unit').text or '' }}</a></td>
                     {%- endfor %}
-                    {%- if b.find('algdata/results') %}{% for var in b.find('algdata/results') %}
-                    <td>{% if var.find('description').text %}{{ var.find('description').text }} in {% endif %}<a href="../units/{{var.find('unit').text}}.html">{{ var.find('unit').text or '' }}</a></td>
-                    {% endfor %}{%- endif %}
                 </tr>
                 <tr>
                     {%- for var in b.find('algdata/variables') %}
                     <td><input type="text" name="{{var.tag}}" oninput="calc()" onkeyup="calc()"{% if var.find('op').text %} op="{{var.find('op').text}}"{% endif %}></td>
                     {%- endfor %}
-                    {%- if b.find('algdata/results') %}{%- for var in b.find('algdata/results') %}
-                    <td><input type="text" name="{{var.tag}}" disabled=""{% if var.find('op').text %} oninput="calc()" op="{{var.find('op').text}}"{% endif %}></td>
-                    {% endfor -%}{%- endif %}
                 </tr>
+                {%- if b.find('algdata/results') %}
+                <tr>
+                    {%- for var in b.find('algdata/results') %}
+                    <td>{% if var.find('description').text %}{{ var.find('description').text }} in {% endif %}<a href="../units/{{var.find('unit').text}}.html">{{ var.find('unit').text or '' }}</a></td>
+                    {%- endfor %}
+                </tr>
+                <tr>
+                    {%- for var in b.find('algdata/results') %}
+                    <td><input type="text" name="{{var.tag}}" disabled=""{% if var.find('op').text %} oninput="calc()" op="{{var.find('op').text}}"{% endif %}></td>
+                    {%- endfor %}
+                </tr>
+                {%- endif %}
             </table>
         {% endif %}</td>
     </tr>
@@ -41,16 +47,16 @@
         <td>Also cited in:</td><td>{{ (b.find('biblioref/abbrev2').text or '')|replace('_',' ') }}{% if b.find('biblioref/pagenums2').text %}, {{ b.find('biblioref/pagenums2').text }}{% endif %}</td>
     </tr>
     <tr>
-        <td>Algorithm type:</td><td>{% if b.find('algorithm_description/algorithm_type').text %}<a href="../algorithm_type/{{b.find('algorithm_description/algorithm_type').text|lower}}.html">{{ b.find('algorithm_description/algorithm_type').text }}</a>{% endif %}</td>
-        <td>Position in process:</td><td>{% if b.find('algorithm_description/position_in_process').text %}<a href="../position_in_process/{{b.find('algorithm_description/position_in_process').text|lower}}.html">{{ b.find('algorithm_description/position_in_process').text }}</a>{% endif %}</td>
+        <td>Algorithm type:</td><td>{% if b.find('algorithm_description/algorithm_type').text %}<a href="../algorithm_type/{{b.find('algorithm_description/algorithm_type').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/algorithm_type').text }}</a>{% endif %}</td>
+        <td>Position in process:</td><td>{% if b.find('algorithm_description/position_in_process').text %}<a href="../position_in_process/{{b.find('algorithm_description/position_in_process').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/position_in_process').text }}</a>{% endif %}</td>
     </tr>
     <tr>
-        <td>Material:</td><td>{% if b.find('algorithm_description/material').text %}<a href="../material/{{b.find('algorithm_description/material').text|lower}}.html">{{ b.find('algorithm_description/material').text }}</a>{% endif %}</td>
-        <td>Source type:</td><td>{% if b.find('algorithm_description/source_type').text %}<a href="../source_type/{{b.find('algorithm_description/source_type').text|lower}}.html">{{ b.find('algorithm_description/source_type').text }}</a>{% endif %}</td>
+        <td>Material:</td><td>{% if b.find('algorithm_description/material').text %}<a href="../material/{{b.find('algorithm_description/material').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/material').text }}</a>{% endif %}</td>
+        <td>Source type:</td><td>{% if b.find('algorithm_description/source_type').text %}<a href="../source_type/{{b.find('algorithm_description/source_type').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/source_type').text }}</a>{% endif %}</td>
     </tr>
     <tr>
-        <td>Source chronology:</td><td>{% if b.find('algorithm_description/source_chronology').text %}<a href="../source_chronology/{{b.find('algorithm_description/source_chronology').text|lower}}.html">{{ b.find('algorithm_description/source_chronology').text }}</a>{% endif %}</td>
-        <td>Source geography:</td><td>{% if b.find('algorithm_description/source_geography').text %}<a href="../source_geography/{{b.find('algorithm_description/source_geography').text|lower}}.html">{{ b.find('algorithm_description/source_geography').text }}</a>{% endif %}</td>
+        <td>Source chronology:</td><td>{% if b.find('algorithm_description/source_chronology').text %}<a href="../source_chronology/{{b.find('algorithm_description/source_chronology').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/source_chronology').text }}</a>{% endif %}</td>
+        <td>Source geography:</td><td>{% if b.find('algorithm_description/source_geography').text %}<a href="../source_geography/{{b.find('algorithm_description/source_geography').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/source_geography').text }}</a>{% endif %}</td>
     </tr>
     <tr>
         <td>Notes:</td><td colspan="3">{{ b.find('algnotes/general_notes').text or '' }}</td>
