--- a/EnCAB/templates/algorithm.html
+++ b/EnCAB/templates/algorithm.html
@@ -42,9 +42,9 @@
         {% endif %}</td>
     </tr>
     <tr>
-        <td>Source info:</td><td>{% if b.find('biblioref/abbrev').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author/surname') or '').text|replace(' ','')|strip('.,')}}{{(b.find('biblioref/authorgroup/author/firstname').text or '')|replace(' ','')|strip('.,')}}">{{ b.find('biblioref/abbrev').text|replace('_',' ') }}</a>{% endif %}
+        <td>Source info:</td><td>{% if b.find('biblioref/abbrev').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev').text|replace('_',' ') }}</a>{% endif %}
         {%- if b.find('biblioref/pagenums').text %}, {{ b.find('biblioref/pagenums').text }}{% endif %}</td>
-        <td>Also cited in:</td><td>{% if b.find('biblioref/abbrev2').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author2/surname') or '').text|replace(' ','')|strip('.,')}}{{(b.find('biblioref/authorgroup/author2/firstname').text or '')|replace(' ','')|strip('.,')}}">{{ b.find('biblioref/abbrev2').text|replace('_',' ') }}</a>{% endif %}
+        <td>Also cited in:</td><td>{% if b.find('biblioref/abbrev2').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author2/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author2/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev2').text|replace('_',' ') }}</a>{% endif %}
     </tr>
     <tr>
         <td>Algorithm type:</td><td>{% if b.find('algorithm_description/algorithm_type').text %}<a href="../algorithm_type/{{b.find('algorithm_description/algorithm_type').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/algorithm_type').text }}</a>{% endif %}</td>
@@ -66,14 +66,14 @@
     </tr>
     <tr>
         <td>How to cite:</td><td>EnCAB alg. - {{ b.find('reference').text }}</td>
-        <td>Created by/on:</td><td>{% if b.find('algauthors/creation_author_group/author') %}<a href="../bibliography/bibliography.html#{{(b.find('algauthors/creation_author_group/author/surname') or '').text|replace(' ','')|strip('.,')}}{{(b.find('algauthors/creation_author_group/author/firstname').text or '')|replace(' ','')|strip('.,')}}">{{(b.find('algauthors/creation_author_group/author/surname') or '').text}} {{(b.find('algauthors/creation_author_group/author/firstname').text or '')}}</a>{% endif %}
+        <td>Created by/on:</td><td>{% if b.find('algauthors/creation_author_group/author') %}<a href="../bibliography/bibliography.html#{{(b.find('algauthors/creation_author_group/author/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('algauthors/creation_author_group/author/firstname').text or '').strip('.,')|replace(' ','')}}">{{(b.find('algauthors/creation_author_group/author/surname').text or '')}} {{(b.find('algauthors/creation_author_group/author/firstname').text or '')}}</a>{% endif %}
         {%- if b.find('algauthors/creation_author_group/creation_date').text %}, {{ b.find('algauthors/creation_author_group/creation_date').text }}{% endif %}</td>
     </tr>
     <tr>
         <td>Input data:</td><td><a href="../algorithms_data/{{filename}}">{{ filename }}</a></td>
         <td>Modified by/on:</td><td>
         {%- for modification_author_group in b.find('algauthors/modification_author_group') %}
-            <a href="../bibliography/bibliography.html#{{(modification_author_group.find('author/surname') or '').text|replace(' ','')|strip('.,')}}{{(modification_author_group.find('author/firstname').text or '')|replace(' ','')|strip('.,')}}">{{(modification_author_group.find('author/surname') or '').text}} {{(modification_author_group.find('author/firstname').text or '')}}</a>
+            <a href="../bibliography/bibliography.html#{{(modification_author_group.find('author/surname').text or '').strip('.,')|replace(' ','')}}{{(modification_author_group.find('author/firstname').text or '').strip('.,')|replace(' ','')}}">{{(modification_author_group.find('author/surname').text or '')}} {{(modification_author_group.find('author/firstname').text or '')}}</a>
             {%- if modification_author_group.find('creation_date').text %}, {{ modification_author_group.find('creation_date').text }}{% endif %}
         {%- if not loop.last %}; {% endif %}{% endfor %}</td>
     </tr>
