--- a/EnCAB/templates/algorithm.html
+++ b/EnCAB/templates/algorithm.html
@@ -18,7 +18,7 @@
             <table class="algo">
                 <tr>
                     {%- for var in b.find('algdata/variables') %}
-                    <td>{% if var.find('description').text %}{{ var.find('description').text }} in {% endif %}<a href="../units/{{var.find('unit').text}}.html">{{ var.find('unit').text or '' }}</a></td>
+                    <td>{% if var.find('description').text %}{{ var.find('description').text }} in {% endif %}<a href="../units/{{var.find('unit').text|lower}}.html">{{ var.find('unit').text or '' }}</a></td>
                     {%- endfor %}
                 </tr>
                 <tr>
@@ -26,10 +26,10 @@
                     <td><input type="text" name="{{var.tag}}" oninput="calc(this)" onkeyup="calc(this)"{% if var.find('op').text %} data-op="{{var.find('op').text}}"{% endif %}></td>
                     {%- endfor %}
                 </tr>
-                {%- if b.find('algdata/results') %}
+                {%- if b.find('algdata/results/*') %}
                 <tr>
                     {%- for var in b.find('algdata/results') %}
-                    <td>{% if var.find('description').text %}{{ var.find('description').text }} in {% endif %}<a href="../units/{{var.find('unit').text}}.html">{{ var.find('unit').text or '' }}</a></td>
+                    <td>{% if var.find('description').text %}{{ var.find('description').text }} in {% endif %}<a href="../units/{{var.find('unit').text|lower}}.html">{{ var.find('unit').text or '' }}</a></td>
                     {%- endfor %}
                 </tr>
                 <tr>
@@ -42,9 +42,10 @@
         {% endif %}</td>
     </tr>
     <tr>
-        <td>Source info:</td><td>{% if b.find('biblioref/abbrev').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev').text|replace('_',' ') }}</a>{% endif %}
+        <td>Source info:</td><td>{% if b.find('biblioref/authorgroup/author').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev').text|replace('_',' ') }}</a>{% else %}{{ (b.find('biblioref/abbrev').text|replace('_',' ')) or '' }}{% endif %}
         {%- if b.find('biblioref/pagenums').text %}, {{ b.find('biblioref/pagenums').text }}{% endif %}</td>
-        <td>Also cited in:</td><td>{% if b.find('biblioref/abbrev2').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author2/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author2/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev2').text|replace('_',' ') }}</a>{% endif %}
+        <td>Also cited in:</td><td>{% if b.find('biblioref/authorgroup/author2').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author2/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author2/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev2').text|replace('_',' ') }}</a>{% else %}{{ (b.find('biblioref/abbrev2').text|replace('_',' ')) or '' }}{% endif %}
+        {%- if b.find('biblioref/pagenums2').text %}, {{ b.find('biblioref/pagenums').text }}{% endif %}</td>
     </tr>
     <tr>
         <td>Algorithm type:</td><td>{% if b.find('algorithm_description/algorithm_type').text %}<a href="../algorithm_type/{{b.find('algorithm_description/algorithm_type').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/algorithm_type').text }}</a>{% endif %}</td>
@@ -72,9 +73,9 @@
     <tr>
         <td>Input data:</td><td><a href="../algorithms_data/{{filename}}">{{ filename }}</a></td>
         <td>Modified by/on:</td><td>
-        {%- for modification_author_group in b.find('algauthors/modification_author_group') %}
-            <a href="../bibliography/bibliography.html#{{(modification_author_group.find('author/surname').text or '').strip('.,')|replace(' ','')}}{{(modification_author_group.find('author/firstname').text or '').strip('.,')|replace(' ','')}}">{{(modification_author_group.find('author/surname').text or '')}} {{(modification_author_group.find('author/firstname').text or '')}}</a>
-            {%- if modification_author_group.find('creation_date').text %}, {{ modification_author_group.find('creation_date').text }}{% endif %}
+        {%- for modification_author in b.find('algauthors/modification_author_group') %}
+            <a href="../bibliography/bibliography.html#{{(modification_author.find('surname').text or '').strip('.,')|replace(' ','')}}{{(modification_author.find('firstname').text or '').strip('.,')|replace(' ','')}}">{{(modification_author.find('surname').text or '')}} {{(modification_author.find('firstname').text or '')}}</a>
+            {%- if modification_author.find('creation_date').text %}, {{ modification_author_group.find('creation_date').text }}{% endif %}
         {%- if not loop.last %}; {% endif %}{% endfor %}</td>
     </tr>
 </table>
