--- a/EnCAB/templates/algorithm.html
+++ b/EnCAB/templates/algorithm.html
@@ -1,11 +1,15 @@
 
-{% for b, filename in blocks_data -%}
-<a href="#{{ b.find('reference').text }}">{{ b.find('reference').text|replace('_','&nbsp;') }}</a>{% if not loop.last %}&nbsp;- {% endif %}
-{% endfor %}
+{#- --- INDEX --- #}
+{%- set ns = namespace(new_sort = '') %}
+{% for b, filename in blocks_data -%}{% if b.find(sort).text.lower() != ns.new_sort.lower() %}{% set ns.new_sort = b.find(sort).text %}
+{% if ns.new_sort %}{% if not loop.first %} - {% endif %}<a href="#{{ ns.new_sort.lower() }}">{{ ns.new_sort|replace('_','&nbsp;') }}</a>{% endif %}
+{%- endif %}{% endfor %}
+{% set ns.new_sort = '' %}
 
 <br><br><br>
 
 {% for b, filename in blocks_data %}
+{% if b.find(sort).text.lower() != ns.new_sort.lower() %}{% set ns.new_sort = b.find(sort).text %}<a name="{{ ns.new_sort.lower() }}"></a>{% endif %}
 <a name="{{ b.find('reference').text }}"></a>
 <b>{{ b.find('reference').text|replace('_','&nbsp;') }}</b>
 <table class="data">
@@ -42,18 +46,18 @@
         {% endif %}</td>
     </tr>
     <tr>
-        <td>Source info:</td><td>{% if b.find('biblioref/authorgroup/author').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev').text|replace('_',' ') }}</a>{% else %}{{ (b.find('biblioref/abbrev').text|replace('_',' ')) or '' }}{% endif %}
+        <td>Source info:</td><td>{% if b.find('biblioref/authorgroup/author').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev').text|replace('_',' ') }}</a>{% else %}{{ (b.find('biblioref/abbrev').text or '')|replace('_',' ') }}{% endif %}
         {%- if b.find('biblioref/pagenums').text %}, {{ b.find('biblioref/pagenums').text }}{% endif %}</td>
-        <td>Also cited in:</td><td>{% if b.find('biblioref/authorgroup/author2').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author2/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author2/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev2').text|replace('_',' ') }}</a>{% else %}{{ (b.find('biblioref/abbrev2').text|replace('_',' ')) or '' }}{% endif %}
+        <td>Also cited in:</td><td>{% if b.find('biblioref/authorgroup/author2').text %}<a href="../bibliography/bibliography.html#{{(b.find('biblioref/authorgroup/author2/surname').text or '').strip('.,')|replace(' ','')}}{{(b.find('biblioref/authorgroup/author2/firstname').text or '').strip('.,')|replace(' ','')}}">{{ b.find('biblioref/abbrev2').text|replace('_',' ') }}</a>{% else %}{{ (b.find('biblioref/abbrev2').text or '')|replace('_',' ') }}{% endif %}
         {%- if b.find('biblioref/pagenums2').text %}, {{ b.find('biblioref/pagenums').text }}{% endif %}</td>
     </tr>
     <tr>
-        <td>Algorithm type:</td><td>{% if b.find('algorithm_description/algorithm_type').text %}<a href="../algorithm_type/{{b.find('algorithm_description/algorithm_type').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/algorithm_type').text }}</a>{% endif %}</td>
-        <td>Position in process:</td><td>{% if b.find('algorithm_description/position_in_process').text %}<a href="../position_in_process/{{b.find('algorithm_description/position_in_process').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/position_in_process').text }}</a>{% endif %}</td>
+        <td>Algorithm type:</td><td>{% if b.find('algorithm_description/algorithm_type').text %}<a href="../algorithm_type/{{b.find('algorithm_description/algorithm_type').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/algorithm_type').text|title }}</a>{% endif %}</td>
+        <td>Position in process:</td><td>{% if b.find('algorithm_description/position_in_process').text %}<a href="../position_in_process/{{b.find('algorithm_description/position_in_process').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/position_in_process').text|title }}</a>{% endif %}</td>
     </tr>
     <tr>
-        <td>Material:</td><td>{% if b.find('algorithm_description/material').text %}<a href="../material/{{b.find('algorithm_description/material').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/material').text }}</a>{% endif %}</td>
-        <td>Source type:</td><td>{% if b.find('algorithm_description/source_type').text %}<a href="../source_type/{{b.find('algorithm_description/source_type').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/source_type').text }}</a>{% endif %}</td>
+        <td>Material:</td><td>{% if b.find('algorithm_description/material').text %}<a href="../material/{{b.find('algorithm_description/material').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/material').text|title }}</a>{% endif %}</td>
+        <td>Source type:</td><td>{% if b.find('algorithm_description/source_type').text %}<a href="../source_type/{{b.find('algorithm_description/source_type').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/source_type').text|title }}</a>{% endif %}</td>
     </tr>
     <tr>
         <td>Source chronology:</td><td>{% if b.find('algorithm_description/source_chronology').text %}<a href="../source_chronology/{{b.find('algorithm_description/source_chronology').text|replace(' ','_')|lower}}.html">{{ b.find('algorithm_description/source_chronology').text }}</a>{% endif %}</td>
