--- a/docs/styles.css
+++ b/docs/styles.css
@@ -28,10 +28,10 @@ h1,h2,h3 {
 h4,h5,h6 {
 }
 
-a:link    { color: #00e; }
-a:visited { color: #551a8b; }
-a:hover   { color: #06e; }
-a:active  { color: #f00; }
+a:link         { color: #00e; }
+a:link:visited { color: #551a8b; }
+a:link:hover   { color: #06e; }
+a:link:active  { color: #f00; }
 
 img {
     max-width: 100%;
